# bamber19-icesheets

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yaml  pythonpackage.yaml
bamber19-icesheets/: justfile
bamber19-icesheets/src/: bamber19_icesheets_preprocess.py
bamber19-icesheets/src/bamber19_icesheets/: AssignFP.py  __init__.py  bamber19_icesheets_postprocess.py  bamber19_icesheets_preprocess.py  bamber19_icesheets_project.py  cli.py
modules/bamber19/icesheets/: bamber19_icesheets_postprocess.py
src/bamber19-icesheets/: bamber19_icesheets_postprocess.py  cli.py
src/bamber19_icesheets/: AssignFP.py  bamber19_icesheets_fit.py  bamber19_icesheets_postprocess.py  bamber19_icesheets_preprocess.py  bamber19_icesheets_project.py  cli.py
