[project]
name = "bamber19-icesheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "dask>=2025.9.0",
    "h5py>=3.14.0",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "ruff>=0.13.0",
    "scipy>=1.16.1",
    "xarray>=2025.9.0",
]

[project.scripts]
bamber19-icesheets = "bamber19_icesheets.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"